# YubiAI

./: .gitignore  LICENSE.md  README.md  __init__.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_model_addition.yml
benchmark/: Dockerfile  LICENSE  README.md  analyze.py  analyze_dataset.py  benchmarks.py  datasets.py  get_memory_usage.py  requirements.txt  run.py
benchmark/datasets/WiLI-2018/: download
benchmark/datasets/dakshina-dataset-v1/: dashina_benchmark.csv  download
benchmark/datasets/norvig-most-frequent-eng-words-dataset/: download
benchmark/datasets/tatoeba-sentences-2021-06-05/: download  stats.md
benchmark/datasets/tatoeba-sentences-2021-06-05-common-48/: download  stats.md
benchmark/models/: fasttext.py  gcld3.py  langdetect.py  langid.py  pycld2.py  yubidetect_e8_v1.py  yubidetect_v1.py  yubidetect_v2.py
benchmark/results/dakshina-dataset-v1/: results_latn.md
benchmark/results/dakshina-dataset-v1-gt2/: results_latn.md
benchmark/results/english-words-dataset/: results_latn.md
benchmark/results/norvig-freq-eng-words-dataset/: results_latn.md
benchmark/results/open-subtitles-v2018-100k-per-lang/: results_latn.md
benchmark/results/tatoeba-sentences-2021-06-05/: results_latn.md
benchmark/results/tatoeba-sentences-2021-06-05-common-48/: results_latn.md
benchmark/results/yubi-benchmark-dataset-v1/: results_latn.md
benchmark/templates/: classification_performance.md  dataset_results.md  speed_performance.md
nlp/language_detection/: README.md  yubiLanguageDetection.py
nlp/seq2seq/: README.md  util.py
nlp/tokenizer/: yubiTokenizer.py
nlp/yubiEmbeddings/: README.md  finetune_yubibert_classification_example.py  finetune_yubibert_classification_example.sh  yubibert.py
vision/skew_detection/: README.md  document_skew_detection.py
vision/utility/: README.md
yubiai/: MSRIT_Internship_Yubi_2023.md  __init__.py
yubiai/nlp/nsfw_text/: README.md  (+1 more)
(+126 files in other folders)
