[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yubiai"
description = "State-of-the-art models in AI,ML,NLP & Vision for FinTech community by Yubi Data Science Team"
authors = []
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "torch==1.13.1",
    "gdown"
]

[project.optional-dependencies]
nlp = [
    "sentencepiece>=0.1.97",
    "fairseq==0.12.2",
    "tokenizers",
    "transformers",
    "sentence-transformers==2.2.2"
]

cv = [
    "tensorflow==2.11.0",
    "keras==2.11.0",
    "detecto==1.2.2"
]

[tool.distutils.bdist_wheel]
universal = true

[project.urls]
Home = "https://github.com/Yubi2Community/YubiAI"

